--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
 
 }
+
+.closed-display{
+    display: inline-block;
+    background-color: red;
+    padding: 3px 4px 3px 4px;
+    border-radius: 5px;
+}
