Added display to view all reports created

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -57,10 +57,10 @@ $colors: (
 
 $tabs-md-tab-icon-color-active: #30D104;
 $tabs-md-tab-text-color-active: white;
-$searchbar-md-input-background-color: #9ACD32;
+$searchbar-md-input-background-color: inherit;
 $searchbar-md-input-box-shadow: 0px 1px bold;
-$searchbar-md-input-search-icon-color: white;
-$searchbar-md-input-text-color: white;
+$searchbar-md-input-search-icon-color: black;
+$searchbar-md-input-text-color: black;
 
 
 // App Windows Variables
