--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -48,6 +48,11 @@ $colors: (
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
+$searchbar-ios-input-background-color: inherit;
+$searchbar-ios-input-placeholder-color: white;
+$searchbar-ios-input-search-icon-color: white;
+$searchbar-ios-input-text-color: white;
+
 
 
 
@@ -59,8 +64,9 @@ $tabs-md-tab-icon-color-active: #30D104;
 $tabs-md-tab-text-color-active: white;
 $searchbar-md-input-background-color: inherit;
 $searchbar-md-input-box-shadow: 0px 1px bold;
-$searchbar-md-input-search-icon-color: black;
-$searchbar-md-input-text-color: black;
+$searchbar-md-input-search-icon-color:white;
+$searchbar-md-input-text-color: white;
+$searchbar-md-input-placeholder-color: white;
 
 
 // App Windows Variables
