Added images for planting materials and fixed ui concerns

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,10 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   main:       #4ED804,
-  myGreen: #9ACD32
+  myGreen: #9ACD32,
+  Plantmaterial: #9ACD32,
+  Fertilizer: #488aff
+
 );
 
 
