--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -56,6 +56,9 @@ $searchbar-ios-input-placeholder-color: white;
 $searchbar-ios-input-search-icon-color: white;
 $searchbar-ios-input-text-color: white;
 
+$item-ios-avatar-border-radius: 25%;
+$item-ios-avatar-size: 25px;
+
 
 
 
@@ -70,6 +73,11 @@ $searchbar-md-input-box-shadow: 0px 1px bold;
 $searchbar-md-input-search-icon-color:white;
 $searchbar-md-input-text-color: white;
 $searchbar-md-input-placeholder-color: white;
+
+$item-md-avatar-size: 25px;
+$item-md-avatar-border-radius: 25%;
+
+
 
 
 // App Windows Variables
