--- a/src/pages/cycle-data/cycle-data.scss
+++ b/src/pages/cycle-data/cycle-data.scss
@@ -6,3 +6,13 @@
 .white-text{
     color: aliceblue;
 }
+
+.totals-border{
+    border: 1px solid red;
+}
+
+.totals-border-bottom{
+    border-bottom: 2px solid red;
+    border-left: 2px solid red;
+    border-right: 2px solid red;
+}
