adjust line spacing in cycle-data page

--- a/src/pages/cycle-data/cycle-data.scss
+++ b/src/pages/cycle-data/cycle-data.scss
@@ -17,6 +17,18 @@
     border-right: 2px solid red;
 }
 
-.h4-prop{
-  padding-top: 2px;
+.h5-prop{
+  padding-top: 1px;
+}
+
+.itemList{
+  margin-bottom: -12px;
+}
+.itemList2{
+  margin-top: -15px;
+  margin-bottom: -5px;
+}
+
+.list1{
+  margin-top: -10px;
 }
