--- a/src/pages/cycle-data/cycle-data.scss
+++ b/src/pages/cycle-data/cycle-data.scss
@@ -32,3 +32,12 @@
 .list1{
   margin-top: -10px;
 }
+
+.closed-display2{
+    background-color: red;
+    padding: 3px 4px 3px 4px;
+    margin: auto;
+    font-size: 20px;
+    font-weight: normal;
+    text-align: center;
+}
